@@ -2,6 +2,11 @@
 # Copyright 2006-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  08 Feb 2007; Chris Gianelloni <wolf31o2@gentoo.org> gen_cmdline.sh,
+  gen_funcs.sh:
+  Added patch from Martin Parm <parmus@diku.dk> to fix the --no-color option.
+  This resolves bug #114156.
+
   15 Jan 2007; Chris Gianelloni <wolf31o2@gentoo.org> gen_bootloader.sh:
   Changed basename to dirname when creating the directory from grub.conf to
   solve bug #161716.
